# geomec_bench

./: .gitignore  CMakeLists.txt  README.md
Fase_1/Benchmark0a/: CMakeLists.txt  HidraulicoMonofasico2D.cpp  HidraulicoMonofasico2D.h  Monofasico.cpp  Monofasico.h  MonofasicoElastico.cpp  MonofasicoElastico.h  TPZDarcy1DMaterial.cpp  TPZDarcy1DMaterial.h  TPZDarcy2DMaterial.cpp  TPZDarcy2DMaterial.h  TPZDarcy2DMaterialMem.cpp  TPZDarcy2DMaterialMem.h  TPZDarcyPMaterial.cpp  TPZFractureInsertion.cpp  TPZFractureNeighborData.cpp  TPZFractureNeighborData.h  TPZMatElastoPlasticDFN.cpp  TPZMatElastoPlasticDFN.h  TPZMatElastoPlasticDFN2D.cpp  TPZMatElastoPlasticDFN2D.h  TPZStiffFracMem.cpp  TPZStiffFracMem.h  TPZStiffFracture.cpp  TPZStiffFracture.h  main.cpp  pzporoelasticmf2d.cpp
Fase_1/Benchmark0a/gmsh/: GeometryBench.geo  GeometryBench.msh  GeometryBench0b.geo  GeometryBench0b.msh  GeometryBench2crossingFrac.geo  GeometryBench2crossingFrac.geo.opt  GeometryBench2crossingFrac.msh  GeometryBenchCoarse.geo  GeometryBenchConnectVerify2.geo  GeometryBenchConnectVerify2.msh  GeometryBenchConnectsVerify.geo  GeometryBenchConnectsVerify.msh  GeometryBenchConnectsVerifyExtreme.geo  GeometryBenchConnectsVerifyExtreme.msh  GeometryBenchConnectsVerifyExtreme2frac.geo  GeometryBenchConnectsVerifyExtreme2frac.msh  GeometryBenchP21Max.geo  GeometryBenchP21Max.msh  GeometryBenchP21Original.geo  GeometryBenchP21Original.msh  GeometryBenchP21p90.geo  GeometryBenchP21p90.msh  GeometryBenchPivotNonPivot.geo  GeometryBenchPivotNonPivot.msh  GeometrySqSimple.geo  example_of_intersection.geo  fool.geo
Fase_1/Benchmark0a/gmsh/macros/: IntersectLines.geo
Fase_1/Benchmark0a/gmsh/msh/: GeometryBench.msh  GeometryBench0b.msh  GeometryBenchCoarse.msh  GeometrySqSimple.msh
MHM_Frac/: BoxReservoir.geo  CMakeLists.txt  FracFlow.cpp  FracFlowGmsh.cpp  FracPre.cpp  FractureIntersectionConfig.cpp  FractureIntersectionConfig.h  TPZElementIntersect.cpp  TPZElementIntersect.h  TPZFracSet.cpp  TPZFracSet.h  TPZFracSimulation.cpp  TPZFracSimulation.h  TPZFractureIntersection.cpp  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h  TPZPlaneInsertion.cpp  TPZPlaneInsertion.h  TPZPointCloud.cpp  TPZPointCloud.h  VTKIntersect.cpp  VTKIntersect.h  cube.geo  plane.geo
(+31 files in other folders)
